<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <View
        android:id="@+id/vOne"
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:background="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/ivOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvOne"
        android:layout_marginStart="20dp"/>
    <TextView
        android:id="@+id/tvOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_task"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivOne"
        app:layout_constraintBottom_toBottomOf="@+id/vOne"
        android:layout_marginStart="20dp"/>
    <TextView
        android:id="@+id/tvTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintTop_toBottomOf="@+id/vOne"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/etOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btnbgtwo"
        android:text="@string/webinar"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTwo"/>
    <TextView
        android:id="@+id/tvThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintTop_toBottomOf="@+id/etOne"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/etTwo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/btnbgtwo"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvThree"/>
    <TextView
        android:id="@+id/tvFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintTop_toBottomOf="@+id/etTwo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/etThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btnbgtwo"
        android:text="@string/mar_24"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFour"/>

    <TextView
        android:id="@+id/tvFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        app:layout_constraintTop_toBottomOf="@+id/etThree"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"/>

    <RadioButton
        android:id="@+id/rbOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvFive"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/tvSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pending"
        app:layout_constraintStart_toEndOf="@+id/rbOne"
        app:layout_constraintTop_toBottomOf="@id/tvFive"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"/>

    <RadioButton
        android:id="@+id/rbTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvFive"
        app:layout_constraintStart_toEndOf="@+id/tvSix"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/tvSeven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed"
        app:layout_constraintStart_toEndOf="@+id/rbTwo"
        app:layout_constraintTop_toBottomOf="@id/tvFive"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"/>
    <Button
        android:id="@+id/btnOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/add_task"
        android:drawableStart="@drawable/ic_plus"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:padding="20dp"
        android:textAllCaps="false"
        android:background="@drawable/btnbgone"
        app:layout_constraintTop_toBottomOf="@+id/rbOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>