<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <View
        android:id="@+id/vOne"
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:background="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/ivOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvOne"
        android:layout_marginStart="20dp"/>
    <TextView
        android:id="@+id/tvOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivOne"
        app:layout_constraintBottom_toBottomOf="@+id/vOne"
        android:layout_marginStart="20dp"/>
    <TextView
        android:id="@+id/tvTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/vOne"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/etOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btnbgtwo"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTwo"/>
    <TextView
        android:id="@+id/tvThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/etOne"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/etTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btnbgtwo"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvThree"/>
    <TextView
        android:id="@+id/tvFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_forgot"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@+id/etTwo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"/>
    <View
        android:layout_width="145dp"
        android:layout_height="1dp"
        android:background="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFour"
        android:layout_marginStart="20dp"/>
    <Button
        android:id="@+id/btnOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/account_creation"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:padding="20dp"
        android:textAllCaps="false"
        android:background="@drawable/btnbgone"
        app:layout_constraintTop_toBottomOf="@+id/tvFour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>