<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_taskifyimage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ivTwo"/>
    <ImageView
        android:id="@+id/ivTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_taskifytext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivOne"
        app:layout_constraintBottom_toTopOf="@+id/btnOne"/>
    <Button
        android:id="@+id/btnOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/account_creation"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:padding="20dp"
        android:textAllCaps="false"
        android:background="@drawable/btnbgone"
        app:layout_constraintTop_toBottomOf="@+id/ivTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvOne"/>
    <TextView
        android:id="@+id/tvOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_account"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/btnOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/tvTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/login"
        android:textColor="@color/orange"
        app:layout_constraintStart_toEndOf="@+id/tvOne"
        app:layout_constraintTop_toBottomOf="@+id/btnOne"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="10dp"/>
    <View
        android:layout_width="40dp"
        android:layout_height="1dp"
        android:background="@color/orange"
        app:layout_constraintTop_toBottomOf="@+id/tvTwo"
        app:layout_constraintStart_toEndOf="@+id/tvOne"
        android:layout_marginStart="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>